# dgmon

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
data/blocks/: blocks.json
data/layouts/: layouts.json  pallet_town.json  route_1.json
data/tiles/: outside.json
data/zones/: zones.json
libs/: CMakeLists.txt
libs/data/: Data.hpp  LayoutLoader.cpp  LayoutLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
libs/game/: Block.cpp  Block.hpp  Connection.hpp  Game.hpp  Layout.cpp  Layout.hpp  ScreenLayer.cpp  ScreenLayer.hpp  TextureLoader.cpp  TextureLoader.hpp  Tile.hpp  Trainer.cpp  Trainer.hpp  Zone.cpp  Zone.hpp  ZoneLayer.cpp  ZoneLayer.hpp
libs/state/: Screen.hpp  State.hpp  StateManager.cpp  StateManager.hpp  StateTransition.hpp
libs/util/: Collidable.hpp  Const.hpp  Direction.cpp  Direction.hpp  Movable.hpp  Util.hpp
